Fixed whitespace in _db.php causing headers to be sent too early

--- a/app/css/con-nexus.css
+++ b/app/css/con-nexus.css
@@ -164,7 +164,7 @@ img.con-logo {
 }
 
 .ui-page .ui-header a.schedule-nav {
-	margin-top: 4em;
+	margin-top: 3.5em;
 }
 
 a.ui-btn-up-d,
